<resources>
    <string-array name="array_type_repeat">
        <item>Everyday</item>
        <item>EveryWeekday</item>
        <item>Everydayoff</item>
    </string-array>
    <string name="app_name">Motivateo</string>
    <string name="active">Active</string>
    <string name="Today">Today</string>
    <string name="All">All</string>
    <string name="have_account">Already have account</string>
    <string name="registration">Registration</string>
    <string name="login">Login</string>
    <string name="signin">SignIn</string>
    <string name="back">back</string>
    <string name="com_auth0_client_id">1erGzfgFDuep1ICCfrYtgvY742M008N1</string>
    <string name="com_auth0_domain">magomed.eu.auth0.com"</string>
    <string name="auth0_preferences">AUTH0_SHARED_PREFERENCES_KEY</string>
    <string name="tasks">Tasks</string>
    <string name="shop">Shop</string>
    <string name="settings">Settings</string>
    <string name="lorem_ipsum"><![CDATA[Lorem ipsum dolor sit amet, consectetur adipiscing elit. Mauris et magna ut erat elementum cursus in quis ipsum. Nam faucibus ultrices eros, vel tempor leo semper sit amet. Duis magna quam, congue vitae interdum nec, condimentum ut lectus. Sed commodo venenatis eros a dignissim. Nunc adipiscing turpis nec magna venenatis at ultricies ipsum bibendum. Sed volutpat urna quis nisi vulputate egestas. Etiam eu dui a enim lacinia dapibus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.\n\nPhasellus orci mi, eleifend nec congue id, volutpat at neque. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer semper velit vel leo rutrum sed fermentum elit porta.]]></string>
    <string name="set_time">Set Time</string>
    <string name="vk">vk</string>
    <string name="repeat">Repeat</string>
    <string name="recall">Recall</string>
    <string name="count">Count</string>
    <string name="notification">Notification</string>
    <string name="remind">Remind</string>
    <string name="save">Save</string>
    <string name="button">Button</string>
    <string name="add">Add</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="exit">Exit</string>
    <string name="create_task">Create Task</string>
    <string name="everyday">EVeryDay</string>
    <string name="every_weekday">Every weekday</string>
    <string name="every_day_off">Every day off</string>
    <string name="arbitrarily">Arbitrarily</string>
</resources>
