<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/tasks"
            android:title="@string/tasks" />
        <item
            android:id="@+id/shop"
            android:title="@string/shop" />
        <item
            android:id="@+id/settings"
            android:title="@string/settings" />
        <item
            android:id="@+id/exit"
            android:title="@string/exit" />
    </group>

    <!--<item android:title="Communicate">-->
        <!--<menu>-->
            <!--<item-->
                <!--android:id="@+id/nav_share"-->
                <!--android:title="Share" />-->
            <!--<item-->
                <!--android:id="@+id/nav_send"-->
                <!--android:title="Send" />-->
        <!--</menu>-->
    <!--</item>-->

</menu>
