<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_orange_dark">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:contentDescription=""
        app:srcCompat="@drawable/m14"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="28dp" />

    <Button
        android:id="@+id/registration"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/registration"
        android:textSize="@dimen/text_size"
        android:layout_below="@+id/imageView"
        android:layout_alignStart="@+id/imageView"
        android:layout_marginTop="42dp" />

    <TextView
        android:id="@+id/main_textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/text_size"
        android:text="@string/have_account"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/sign_in"
        android:layout_alignStart="@+id/sign_in" />

    <Button
        android:id="@+id/sign_in"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/signin"
        android:textSize="@dimen/text_size"
        android:background="@android:color/holo_orange_light"
        android:layout_above="@+id/sign_in_vk"
        android:layout_alignStart="@+id/sign_in_vk"
        android:layout_marginBottom="15dp" />

    <Button
        android:id="@+id/sign_in_vk"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/vk"
        android:textSize="@dimen/text_size"
        android:background="@android:color/holo_orange_light"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/registration"
        android:layout_marginBottom="76dp" />

    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="invisible"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"/>
</RelativeLayout>